# AI_workflow_playbook

./: .gitignore  PLAYBOOK.md  README.md  deep-research-report(1).md  pytest.ini  requirements-dev.txt
companion/ai_workflow_harness_lab/: README.md  pyproject.toml
companion/ai_workflow_harness_lab/src/ai_workflow_harness_lab/: __init__.py  cli.py  comparison.py  environment.py  evidence.py  failures.py  models.py  receipts.py  runner.py  suite_loader.py
companion/ai_workflow_harness_lab/src/ai_workflow_harness_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
companion/ai_workflow_harness_lab/src/ai_workflow_harness_lab/adapters/: base.py  command.py  scripted.py
companion/ai_workflow_harness_lab/src/ai_workflow_harness_lab/scorers/: base.py  diff_scope.py  file_state.py  json_state.py  meta.py  shell.py
companion/ai_workflow_harness_lab/suites/playbook_core_v1/: suite.json
companion/ai_workflow_harness_lab/suites/playbook_core_v1/fixtures/cross_session_resume/: README.md  state.json
companion/ai_workflow_harness_lab/suites/playbook_core_v1/prompts/: cross_session_resume.playbook.md  fake_test_success.playbook.md  immutable_contract.baseline.md
companion/ai_workflow_harness_lab/suites/shishki_bot_ci_v1/: suite.json
companion/ai_workflow_harness_lab/suites/shishki_bot_ci_v1/prompts/: pin_ci_actions.baseline.md  pin_ci_actions.playbook.md  reject_unapproved_ci_actions.baseline.md  reject_unapproved_ci_actions.playbook.md
companion/ai_workflow_harness_lab/tests/: test_cli.py  test_comparison.py  test_diff_scope.py  test_shell_scorer.py
(+410 files in other folders)
